✨(app): set the maximum height of the cards in the dialog boxes to avoid that they go out of the viewport

--- a/bot/admin/web/src/app/shared/components/json-previewer/json-previewer.component.scss
+++ b/bot/admin/web/src/app/shared/components/json-previewer/json-previewer.component.scss
@@ -1,7 +1,3 @@
-.card-body {
-  max-height: 80vh;
-}
-
 pre {
   padding: 0.5rem;
   margin: 0;
